--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
 div {
-  font-family: Lato;
+  font-family: 'Oswald', sans-serif;
   text-align: center; 
 }
